--- a/CSS/css.css
+++ b/CSS/css.css
@@ -215,6 +215,15 @@ div .container {
   position: relative;
   right: 300px;
 }
+.color_band_6 {
+  height: 160px;
+  width: 40px;
+  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  margin: -2px 3px;
+  justify-content: center;
+}
 }
 @media only screen and (max-width: 400px){
 .resister_box {  
