--- a/CSS/css.css
+++ b/CSS/css.css
@@ -314,3 +314,16 @@ hr.new5 {
     background: transparent;
     top: 50px;
   }
+
+.footer {
+  background: rgb(31, 197, 100);
+  padding: 20px;
+}
+
+.footer-text {
+  color: black;
+  font-weight: 400;
+  font-size: 2em;
+  font-family: monospace;
+  position: relative;
+}
